Update repo name and readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moonbeam-subgraph",
+  "name": "convergence-moonbeam-subgraph",
   "version": "0.1.0",
   "repository": "https://github.com/Convergence-Finance/moonbeam-subgraph",
   "author": "",
